# heart_disease_project

./: .gitignore  README.md  initial_model.ipynb  main.ipynb  pyproject.toml
model/: heart_disease_model_prediction.joblib
