[tool.poetry]
name = "heart-env"
version = "0.1.0"
description = ""
authors = ["rongachoka <rongachoka.rw@gmail.com>"]
readme = "README.md"
packages = [{include = "heart_env"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.25.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
